# strudel-mcp

./: .env.example  .gitignore  AGENT_INTEGRATION_SUMMARY.md  AGENT_SETUP.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVER.md  QUICK_START.md  README.md  debug_parsing.py  evaluations.xml  index.html  package-lock.json  package.json  patterns.js  pyproject.toml  requirements.txt  strudel_mcp.py  strudel_server.py  test_server.py
