[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strudel-mcp"
version = "1.0.0"
description = "MCP server for live ambient music coding with Strudel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
strudel-mcp = "strudel_mcp:main"
